alignment issue in case list fixed

--- a/src/forms/active.forms.css
+++ b/src/forms/active.forms.css
@@ -17,7 +17,7 @@
     width: 5px;
     color: red;    
 }
-#active-forms table tbody tr:nth-child(even) td {
+#active-forms table#my-cases tbody tr:nth-child(even) td {
     background-color: rgb(240, 240, 240);
 }
 #my-cases-empty-label {
